2009-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use Util::parseLLInt instead of sscanf for portability. The
	conversion "%Lu" fails in Mac OSX which requires "%llu" instead.	
	* src/FtpConnection.cc

2009-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that adding 0 length filter to BitfieldMan filters 1
	block. It should not filter anything.
	* src/BitfieldMan.cc
	* src/ConsoleStatCalc.cc
	* test/BitfieldManTest.cc

2009-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that the boolean options that don't take arguments
	don't work.
	* src/OptionHandlerImpl.h
	
2009-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed broken selected file BitTorrent download.
	* src/MultiDiskAdaptor.cc
	* test/MultiDiskAdaptorTest.cc
	* test/MultiFileAllocationIteratorTest.cc

2009-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed #define guard for EpollEventPoll
	* src/EpollEventPoll.h

2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Wait 2 seconds. 1 second is sometimes not enough.
	* test/TimeSeedCriteriaTest.cc
	
2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use localhost instead of 127.0.0.1.
	* test/DHTConnectionImplTest.cc
	
2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Suppressed compiler warning.
	* src/AdaptiveURISelector.cc
	* src/DefaultPieceStorage.cc
	
2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Defined virtual destructor.
	* src/MetalinkParserState.h

2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Give NULL for second argument of getaddrinfo instead of "0".
	* src/NameResolver.cc

2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't use Time::parse(buf, "%Y%m%d%H%M%S") because Mac OS X and
	included strptime doesn't parse data for this format.
	* src/FtpConnection.cc
	* test/FtpConnectionTest.cc
	